test/types/enum/ldelaney/type-zip-bad.good
type-zip-bad.chpl:1: In function 'main':
type-zip-bad.chpl:4: error: unable to iterate over a tuple of non-enum types
